# Cs2-internal

./: CMakeLists.txt  README.md
dependencies/hook/: hook.cpp  hook.h
injector/: CMakeLists.txt  injector.cpp
src/: dllmain.cpp
src/core/: math.cpp  math.h  memory.cpp  memory.h
src/features/legit/: aimbot.cpp  aimbot.h  legit.cpp  legit.h  triggerbot.cpp  triggerbot.h
src/features/visuals/: esp.cpp  esp.h  visuals.cpp  visuals.h
src/game/: entities.h  pattern.cpp  pattern.h
src/gui/: menu.cpp  menu.h
